fix: agregar rol CLIENTE, mapear roles correctamente, authStore con email, AdminInitializer robusto